# SP-Assigments

./: README.md  pyproject.toml
atm/: report.ipynb
atm/ampl/: atm.mod
lab_1/: report.ipynb
lab_1/ampl/: farmer_stochastic.mod
lab_1/exports/: w.csv  wabove.csv  wbelow.csv  x.csv  y.csv
lab_2/: report.ipynb
lab_2/ampl/: newsvendor.mod
lab_2/exports/: w.csv  x.csv  y.csv
