[project]
name = "SP-Assigments"
version = "0.1.0"
description = "Stochastic Programming course assigments"
authors = [
    { name = "reverdat", email = "arnauperezre@gmail.com" }
]
dependencies = [
    "amplpy>=0.14.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stochastic_programming"]
